# Zovly

./: .gitignore  README.md  brand.txt  docker-compose.yaml  package.json  pnpm-lock.yaml  turbo.json
apps/ai/: main.py  pyproject.toml
apps/ai/app/: main.py
apps/ai/app/core/chat/: chat.py  chunking.py  embedding.py  rerank.py  transformer.py
apps/ai/app/core/chat/helpers/: text_formater.py
apps/ai/app/core/tools/: category.py  product.py
apps/ai/app/models/: business_knowledge.py  chat.py  faq.py
apps/ai/app/routes/: chat_router.py  embed_router.py
apps/api-v1/: drizzle.config.ts  main.ts  package.json  tsconfig.json
apps/api-v1/migrations/: 0000_glamorous_master_chief.sql  0001_wet_living_tribunal.sql  0002_glamorous_arclight.sql  0003_eminent_thing.sql  0004_swift_kabuki.sql  0005_eminent_jackpot.sql  0006_easy_ezekiel_stane.sql  0007_sturdy_dragon_man.sql  0008_rare_talkback.sql  0009_nosy_amphibian.sql  0010_motionless_vulture.sql  relations.ts  schema.ts
apps/api-v1/migrations/20260630145651_cynical_deathbird/: migration.sql  snapshot.json
apps/api-v1/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  (+3 more)
apps/api-v1/src/: app.ts
apps/go-core/: go.mod  go.sum
apps/proto/: chat.proto
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: ImageUploader.tsx  app-sidebar.tsx  confirm-delete-dialog.tsx  navbar.tsx
apps/web/lib/: auth-client.ts  auth.ts  axios.ts  redis.ts
(+234 files in other folders)
