[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    "langchain>=1.3.9",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.0",
    "sentence-transformers>=5.5.1",
    "sentencepiece>=0.2.1",
]
