[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.0",
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    "langchain>=1.3.9",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "openai-whisper>=20250625",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.5.1",
    "sentencepiece>=0.2.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
